test case added and  ui vulnerabilty resolved