@@ -71,26 +71,59 @@ class ReportTemplateServiceTest {
     }
 
     @Test
-    void updateTemplateFile_ShouldCreateNewVersion() throws IOException {
+    void updateTemplateFile_WithMappings_ShouldCloneMappings() throws IOException {
         ReportTemplate template = TestDataFactory.createTemplateEntity();
         ReportTemplateVersion latest = new ReportTemplateVersion();
         latest.setVersionNumber(1);
-        latest.setMappings(new ArrayList<>());
+        TemplateQueryMapping m1 = new TemplateQueryMapping();
+        m1.setQueryId("q1");
+        m1.setJsonNodeName("node1");
+        latest.setMappings(new ArrayList<>(List.of(m1)));
         
         when(templateRepository.findById("temp-123")).thenReturn(Optional.of(template));
         when(versionRepository.findTopByTemplateIdOrderByVersionNumberDesc("temp-123")).thenReturn(Optional.of(latest));
-        when(versionRepository.findByTemplateId("temp-123")).thenReturn(Collections.singletonList(latest));
-        when(storageStrategy.saveTemplate(anyString(), any(byte[].class), anyString())).thenReturn("/path2");
+        when(versionRepository.findByTemplateId("temp-123")).thenReturn(List.of(latest));
+        when(storageStrategy.saveTemplate(anyString(), any(), any())).thenReturn("/p2");
 
-        MockMultipartFile file = new MockMultipartFile("file", "test2.docx", "text/plain", "data".getBytes());
+        MockMultipartFile file = new MockMultipartFile("file", "t2.docx", "text/plain", "data".getBytes());
         templateService.updateTemplateFile("temp-123", file);
 
-        verify(versionRepository).save(argThat(v -> v.getVersionNumber() == 2));
+        verify(versionRepository).save(argThat(v -> v.getMappings().size() == 1 && v.getMappings().get(0).getJsonNodeName().equals("node1")));
+    }
+
+    @Test
+    void deleteTemplate_ShouldCleanUpStorage() {
+        ReportTemplate template = TestDataFactory.createTemplateEntity();
+        ReportTemplateVersion v1 = new ReportTemplateVersion();
+        v1.setStoragePath("/p1");
+        template.setVersions(Collections.singletonList(v1));
+
+        when(templateRepository.findById("t1")).thenReturn(Optional.of(template));
+        templateService.deleteTemplate("t1");
+
+        verify(storageStrategy).deleteTemplate("/p1");
+        verify(templateRepository).delete(template);
+    }
+
+    @Test
+    void activateVersion_ShouldSwitchActiveFlags() {
+        ReportTemplateVersion target = new ReportTemplateVersion();
+        target.setTemplate(new ReportTemplate());
+        target.getTemplate().setId("t1");
+
+        when(versionRepository.findById("v1")).thenReturn(Optional.of(target));
+        when(versionRepository.findByTemplateId("t1")).thenReturn(Collections.singletonList(target));
+
+        templateService.activateVersion("v1");
+
+        verify(versionRepository).save(target);
+        assertEquals(1, target.getIsActive());
     }
 
     @Test
     void deleteVersion_ActiveVersion_ShouldPromotePrevious() {
         ReportTemplateVersion target = new ReportTemplateVersion();
+        target.setId("v2");
         target.setIsActive(1);
         target.setStoragePath("/path/to/v2");
         ReportTemplate template = new ReportTemplate();
@@ -98,7 +131,9 @@ class ReportTemplateServiceTest {
         target.setTemplate(template);
         
         ReportTemplateVersion previous = new ReportTemplateVersion();
+        previous.setId("v1");
         previous.setVersionNumber(1);
+        previous.setIsActive(0);
 
         when(versionRepository.findById("v2")).thenReturn(Optional.of(target));
         when(versionRepository.findTopByTemplateIdOrderByVersionNumberDesc("t1")).thenReturn(Optional.of(previous));
@@ -108,6 +143,104 @@ class ReportTemplateServiceTest {
         verify(versionRepository).delete(target);
         verify(versionRepository).save(argThat(v -> v.getIsActive() == 1));
         verify(storageStrategy).deleteTemplate("/path/to/v2");
+    }
+
+    @Test
+    void deleteVersion_InactiveVersion_ShouldNotPromote() {
+        ReportTemplateVersion target = new ReportTemplateVersion();
+        target.setId("v2");
+        target.setIsActive(0);
+        target.setStoragePath("/path/v2");
+        target.setTemplate(new ReportTemplate());
+        target.getTemplate().setId("t1");
+
+        when(versionRepository.findById("v2")).thenReturn(Optional.of(target));
+
+        templateService.deleteVersion("v2");
+
+        verify(versionRepository).delete(target);
+        verify(versionRepository, never()).save(any());
+    }
+
+    @Test
+    void getPlaceholdersForVersion_Complex_ShouldAggregate() {
+        ReportTemplateVersion v = new ReportTemplateVersion();
+        TemplateQueryMapping m1 = new TemplateQueryMapping();
+        m1.setQueryId("q1");
+        TemplateQueryMapping m2 = new TemplateQueryMapping();
+        m2.setQueryId("q2");
+        v.setMappings(List.of(m1, m2));
+
+        PlaceholderMetadataDto p1 = new PlaceholderMetadataDto();
+        p1.setName("date");
+        PlaceholderMetadataDto p2 = new PlaceholderMetadataDto();
+        p2.setName("limit");
+
+        when(versionRepository.findById("v1")).thenReturn(Optional.of(v));
+        when(connectorQueryServiceClient.getPlaceholders("q1")).thenReturn(List.of(p1));
+        when(connectorQueryServiceClient.getPlaceholders("q2")).thenReturn(List.of(p1, p2));
+
+        List<PlaceholderMetadataDto> results = templateService.getPlaceholdersForVersion("v1");
+
+        assertEquals(2, results.size());
+    }
+
+    @Test
+    void importTemplate_Override_ShouldDeleteOldAndSaveNew() {
+        MigrationDto.ImportRequestDto request = new MigrationDto.ImportRequestDto();
+        MigrationDto.TemplateExportDto data = new MigrationDto.TemplateExportDto();
+        data.setTemplateName("T1");
+        data.setDescription("New Desc");
+        data.setConnectors(new ArrayList<>());
+        data.setQueries(new ArrayList<>());
+        
+        MigrationDto.ExportedVersionDto vExport = new MigrationDto.ExportedVersionDto();
+        vExport.setVersionNumber(1);
+        vExport.setFileContentBase64(Base64.getEncoder().encodeToString("test".getBytes()));
+        vExport.setMappings(new ArrayList<>());
+        data.setVersions(Collections.singletonList(vExport));
+        request.setExportData(data);
+
+        MigrationDto.TemplateImportConfig tConfig = new MigrationDto.TemplateImportConfig();
+        tConfig.setOriginalName("T1");
+        tConfig.setStrategy("OVERRIDE");
+        request.setTemplate(tConfig);
+        request.setConnectors(new ArrayList<>());
+        request.setQueries(new ArrayList<>());
+
+        ReportTemplate existing = new ReportTemplate();
+        existing.setName("T1");
+        ReportTemplateVersion oldV = new ReportTemplateVersion();
+        oldV.setStoragePath("old.docx");
+        existing.setVersions(new ArrayList<>(List.of(oldV)));
+        
+        when(templateRepository.findByName("T1")).thenReturn(Optional.of(existing));
+        when(templateRepository.save(any())).thenReturn(existing);
+        when(storageStrategy.saveTemplate(anyString(), any(), any())).thenReturn("new.docx");
+
+        templateService.importTemplate(request);
+
+        verify(storageStrategy).deleteTemplate("old.docx");
+        verify(versionRepository).delete(oldV);
+    }
+
+    @Test
+    void importTemplate_CreateNew_Conflict_ShouldThrowException() {
+        MigrationDto.ImportRequestDto request = new MigrationDto.ImportRequestDto();
+        MigrationDto.TemplateExportDto data = new MigrationDto.TemplateExportDto();
+        data.setTemplateName("T1");
+        request.setExportData(data);
+        request.setConnectors(new ArrayList<>());
+        request.setQueries(new ArrayList<>());
+        
+        MigrationDto.TemplateImportConfig tConfig = new MigrationDto.TemplateImportConfig();
+        tConfig.setTargetName("ExistingName");
+        tConfig.setStrategy("CREATE_NEW");
+        request.setTemplate(tConfig);
+
+        lenient().when(templateRepository.findByName("ExistingName")).thenReturn(Optional.of(new ReportTemplate()));
+
+        assertThrows(RuntimeException.class, () -> templateService.importTemplate(request));
     }
 
     @Test
@@ -144,110 +277,5 @@ class ReportTemplateServiceTest {
         templateService.updateMapping("m1", dto);
 
         verify(mappingRepository).save(mapping);
-    }
-
-    @Test
-    void deleteTemplate_ShouldCleanUpStorage() {
-        ReportTemplate template = TestDataFactory.createTemplateEntity();
-        ReportTemplateVersion v1 = new ReportTemplateVersion();
-        v1.setStoragePath("/p1");
-        template.setVersions(Collections.singletonList(v1));
-
-        when(templateRepository.findById("t1")).thenReturn(Optional.of(template));
-        templateService.deleteTemplate("t1");
-
-        verify(storageStrategy).deleteTemplate("/p1");
-        verify(templateRepository).delete(template);
-    }
-
-    @Test
-    void activateVersion_ShouldSwitchActiveFlags() {
-        ReportTemplateVersion target = new ReportTemplateVersion();
-        target.setTemplate(new ReportTemplate());
-        target.getTemplate().setId("t1");
-
-        when(versionRepository.findById("v1")).thenReturn(Optional.of(target));
-        when(versionRepository.findByTemplateId("t1")).thenReturn(Collections.singletonList(target));
-
-        templateService.activateVersion("v1");
-
-        verify(versionRepository).save(target);
-        assertEquals(1, target.getIsActive());
-    }
-
-    @Test
-    void getPlaceholdersForTemplate_ShouldCallClient() {
-        ReportTemplateVersion v = new ReportTemplateVersion();
-        TemplateQueryMapping m = new TemplateQueryMapping();
-        m.setQueryId("q1");
-        v.setMappings(Collections.singletonList(m));
-
-        when(versionRepository.findTopByTemplateIdOrderByVersionNumberDesc("t1")).thenReturn(Optional.of(v));
-        when(connectorQueryServiceClient.getPlaceholders("q1")).thenReturn(Collections.singletonList(new PlaceholderMetadataDto()));
-
-        List<PlaceholderMetadataDto> results = templateService.getPlaceholdersForTemplate("t1");
-
-        assertNotNull(results);
-        assertEquals(1, results.size());
-    }
-
-    @Test
-    void analyzeImport_ShouldCheckConnectorsAndQueries() {
-        MigrationDto.TemplateExportDto export = new MigrationDto.TemplateExportDto();
-        export.setTemplateName("Imported");
-        MigrationDto.ExportedConnectorDto conn = new MigrationDto.ExportedConnectorDto();
-        conn.setName("Conn1");
-        export.setConnectors(Collections.singletonList(conn));
-        export.setQueries(new ArrayList<>());
-        export.setVersions(new ArrayList<>());
-
-        when(connectorQueryServiceClient.getConnectorByName("Conn1")).thenReturn(Map.of("id", "real-id"));
-        when(templateRepository.findByName("Imported")).thenReturn(Optional.empty());
-
-        MigrationDto.MigrationAnalysisDto analysis = templateService.analyzeImport(export);
-
-        assertTrue(analysis.getConnectors().get("Conn1").isExists());
-    }
-
-    @Test
-    void importTemplate_SkipStrategy_ShouldUseExisting() {
-        MigrationDto.ImportRequestDto request = new MigrationDto.ImportRequestDto();
-        MigrationDto.TemplateExportDto data = new MigrationDto.TemplateExportDto();
-        data.setTemplateName("T1");
-        data.setVersions(new ArrayList<>());
-        request.setExportData(data);
-        
-        MigrationDto.TemplateImportConfig tConfig = new MigrationDto.TemplateImportConfig();
-        tConfig.setOriginalName("T1");
-        tConfig.setStrategy("SKIP");
-        request.setTemplate(tConfig);
-        request.setConnectors(new ArrayList<>());
-        request.setQueries(new ArrayList<>());
-
-        ReportTemplate existing = new ReportTemplate();
-        existing.setName("T1");
-        existing.setVersions(new ArrayList<>());
-        when(templateRepository.findByName("T1")).thenReturn(Optional.of(existing));
-
-        templateService.importTemplate(request);
-
-        verify(templateRepository, never()).save(any(ReportTemplate.class));
-    }
-
-    @Test
-    void exportTemplate_ShouldEncodeFileContent() {
-        ReportTemplate template = TestDataFactory.createTemplateEntity();
-        ReportTemplateVersion v1 = new ReportTemplateVersion();
-        v1.setVersionNumber(1);
-        v1.setStoragePath("test.docx");
-        v1.setMappings(new ArrayList<>());
-        template.setVersions(Collections.singletonList(v1));
-
-        when(templateRepository.findById("temp-123")).thenReturn(Optional.of(template));
-        when(storageStrategy.loadTemplate("test.docx")).thenReturn("content".getBytes());
-
-        MigrationDto.TemplateExportDto result = templateService.exportTemplate("temp-123");
-
-        assertNotNull(result.getVersions().get(0).getFileContentBase64());
     }
 }
